<?xml version="1.0" encoding="utf-8"?><!--
/**
The MIT License (MIT)

Copyright (c) 2013 Valentin Konovalov

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.*/
-->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Paper Wallet</string>
    <string name="generating">Generating bitcoin address…</string>
    <string name="decoding">Decoding private key…</string>
    <string name="generate_button">Generate another</string>
    <string name="private_key_desc">Private key below can be used to spend money from the bitcoin address above. Write
        it down and keep in safe place, then generate another address to clean it.
    </string>
    <string name="generating_failed">Unable to generate a key, sorry.</string>
    <string name="bad_private_key">Unable to decode private key</string>
    <string name="raw_tx_description_header">Now you can spend some coins from %1$s.</string>
    <string name="raw_tx_description">Paste hex-encoded raw transaction which have unspent outputs for the address. %1$s</string>
    <string name="raw_tx_description_2">Or copy-paste %1$s from blockchain.info (application doesn\'t have access to internet to get it automatically):</string>
    <string name="raw_tx_description_wut_link">What?</string>
    <string name="raw_tx_description_json_link">json with unspent outputs</string>
    <string name="raw_tx_description_wut">1) Using blockchain.info or blockexplorer.com go to the address details and find hash of a transaction.\n2) Get the raw transaction in bitcoin-qt using <i>getrawtransaction [hash]</i> command and send it to phone.\n(You may need to start bitcoin-qt from command line with <i>\'-txindex 1\'</i> for that).</string>
    <string name="error_unable_to_decode_transaction">Unable to decode given transaction</string>
    <string name="error_failed_to_create_transaction">Error creating transaction - for some unknown reason generated transaction contained an error.</string>
    <string name="spend_btc_tx_description">Transaction below will transfer %1$s BTC from %2$s to %3$s. Transaction fee is %4$s BTC.</string>
    <string name="spend_btc_tx_with_change_description">Transaction below will transfer %1$s BTC from %2$s to %3$s. Transaction fee is %4$s BTC. Change of %5$s BTC will go to %2$s.</string>
    <string name="spend_bch_tx_description">Transaction below will transfer %1$s BCH from %2$s to %3$s. Transaction fee is %4$s BCH.</string>
    <string name="spend_bch_tx_with_change_description">Transaction below will transfer %1$s BCH from %2$s to %3$s. Transaction fee is %4$s BCH. Change of %5$s BCH will go to %2$s.</string>
    <string name="input_tx_is_old_enough">Input transaction already have more than %1$s. (Is older than ~%2$s)</string>
    <plurals name="tx_size_too_big_to_be_free">
        <item quantity="one">Not eligible for free processing because TX size is too big: %1$d byte.</item>
        <item quantity="other">Not eligible for free processing because TX size is too big: %1$d bytes.</item>
    </plurals>
    <string name="tx_output_is_too_small">Not eligible for free processing because output %1$s BTC is less than %2$s BTC.</string>
    <string name="spend_tx_warning_footer">You can push it with sendrawtransaction bitcoin-qt command. And again, I have no responsibility if
        something will go wrong. The app was carefully tested and transaction was verified, but no one can give any
        warranties that it is bug-free, so use it on your own risk and verify tx\'s output carefully before pushing it.
    </string>
    <string name="raw_tx_hint">Unspent transactions info</string>
    <string name="recipient_address_hint">Receiving address</string>
    <string name="enter_your_private_key">Scan or paste your private key to spend some coins from paper wallet!</string>
    <string name="spend_tx_hint">Generating transaction…</string>
    <string name="invalid_address">Invalid address</string>
    <string name="private_key_type">Private key type: %1$s</string>
    <string name="amount_hint">BTC</string>
    <string name="error_amount_parsing">Invalid amount</string>
    <string name="error_not_enough_funds">Requested amount is bigger than available balance minus fee.</string>
    <string name="error_unknown">Unknown error</string>
    <string name="menu_preferences">Preferences</string>
    <string name="setting_private_key_type">Private key type to generate</string>
    <string name="preference_extra_fee">Extra fee</string>
    <string name="scan_title">Scanning…</string>
    <string name="scan">Scan…</string>
    <string name="paste">Paste…</string>
    <string name="push_btc_tx_label">Copy Bitcoin transaction and open blockchain.info/pushtx…</string>
    <string name="push_bch_tx_label">Copy Bitcoin Cash transaction and open blockdozer.com…</string>
    <string name="btc_tx_description_for_clipboard">Send %1$s BTC to %2$s</string>
    <string name="bch_tx_description_for_clipboard">Send %1$s BCH to %2$s</string>
    <string name="hint_password">Password</string>
    <string name="encrypt_private_key">Encrypt private key</string>
    <string name="not_decrypted_yet">Not decrypted yet</string>
    <string name="decrypt_private_key">Decrypt private key</string>
    <string name="ime_encrypt">Encrypt</string>
    <string name="ime_decrypt">Decrypt</string>
    <string name="decrypted">Decrypted</string>
    <string name="encrypted">Encrypted</string>
    <string name="decrypting">Decrypting…</string>
    <string name="encrypting">Encrypting…</string>
    <string name="incorrect_password">Incorrect password.</string>
    <string name="error_oom_bip38">Oops! The BIP38 requires more than 16 MB of free RAM memory and looks like your phone cannot give that much, sorry.</string>
    <string name="error_no_spendable_outputs_found">No spendable standard outputs for %s have found</string>
    <string name="unable_open_camera">Unable to open camera</string>
    <string name="qr_code_desc">QR code</string>
    <string name="print">Print</string>
    <string name="private_key_for">Private key for %s</string>
    <string name="share">Share</string>
    <string name="share_chooser_title">SEND TO (warning, it\'s insecure)</string>
    <string name="output_address_same_as_input">Output address is same as input address - it\'s likely a mistake.</string>
    <string name="generated_tx_have_too_big_fee">Generated transaction have suspiciously big fee. Please report to developer.</string>
    <string name="json_err_no_unspent_outputs">\"unspent_outputs\" array wasn\'t found</string>
    <string name="error_unable_to_decode_json_transaction">Unable to decode this JSON.\n%s</string>
    <string name="no_apps_to_view_url">Sorry, no installed bitcoin clients found to view this address</string>
    <string name="unable_to_open_browser">This is strange but I cannot open a web browser.</string>
    <string name="no_camera_permission_granted">No camera permission access granted</string>
    <string name="ok">OK</string>
    <string name="testnet_type_prefix">testnet</string>
    <string name="could_not_open_link">リンク%sを開くことができませんでした。</string>

    <string-array name="private_keys_types">
        <item>wallet import format</item>
        <item>mini</item>
        <item>brain wallet, not compressed public key</item>
        <item>brain wallet, compressed public key</item>
        <item>BIP 38 (password protected)</item>
    </string-array>

    <string-array name="private_keys_types_to_generate_labels">
        <item>Mini</item>
        <item>Wallet import format</item>
        <item>Testnet</item>
    </string-array>

    <string-array name="private_keys_types_to_generate" tools:ignore="MissingTranslation">
        <item>mini</item>
        <item>wif_compressed</item>
        <item>test_net</item>
    </string-array>

    <string-array name="private_keys_types_for_qr">
        <item>Mini</item>
        <item>WIF</item>
        <item>Encrypted</item>
    </string-array>

    <plurals name="confirmations">
        <item quantity="one">1 confirmation</item>
        <item quantity="other">%d confirmations</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">1 hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="days">
        <item quantity="one">1 day</item>
        <item quantity="other">%d days</item>
    </plurals>

</resources>
