<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 The MIT License (MIT)

 Copyright (c) 2013 Valentin Konovalov

 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:

 The above copyright notice and this permission notice shall be included in
 all copies or substantial portions of the Software.

 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.*/
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:keepScreenOn="true"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusableInTouchMode="true"
            >

            <requestFocus/>
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <EditText
                android:id="@+id/address_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:gravity="center_horizontal"
                android:text="@string/generating"
                android:inputType="textNoSuggestions|textMultiLine"
                android:textSize="24sp"
                />

            <ImageButton
                android:id="@+id/qr_address_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/qr"
                android:visibility="gone"
                android:contentDescription="@string/qr_code_desc"
                />
        </LinearLayout>

        <Button
            android:id="@+id/generate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_button"
            />

        <TextView
            android:id="@+id/private_key_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4sp"
            android:gravity="center_horizontal"
            android:text="@string/private_key_desc"
            android:visibility="visible"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/private_key_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/secondary_text_light"
            android:paddingTop="4sp"
            android:visibility="gone"
            android:textSize="14sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <EditText
                android:id="@+id/private_key_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:text=""
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:visibility="visible"
                android:textSize="24sp"
                android:inputType="textVisiblePassword|textMultiLine"
                android:imeOptions="actionDone"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                >

                <Button
                    android:id="@+id/scan_private_key_button"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan"/>

                <ImageButton
                    android:id="@+id/qr_private_key_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/qr"
                    android:visibility="gone"
                    android:contentDescription="@string/qr_code_desc"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/password_button"
                android:text="@string/encrypt_private_key"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:enabled="false"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:paddingBottom="12sp"
                >

                <TextView
                    android:id="@+id/err_password"
                    style="@style/error_label"/>

                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeActionId="@+id/action_encrypt"
                    android:imeActionLabel="@string/ime_encrypt"
                    android:hint="@string/hint_password"
                    />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/enter_private_key_to_spend_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/enter_your_private_key"
            android:textColor="@color/dark_orange"
            android:textSize="16sp"
            />

        <LinearLayout
            android:id="@+id/send_layout"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/raw_tx_description_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raw_tx_description_header"
                android:gravity="center_horizontal"
                android:visibility="visible"
                android:textSize="15sp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                />

            <TextView
                android:id="@+id/raw_tx_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raw_tx_description"
                android:visibility="visible"
                android:textSize="14sp"
                android:padding="8dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                >

                <Button
                    android:id="@+id/paste_tx_button"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paste"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12sp"
                    >

                    <TextView
                        android:id="@+id/err_raw_tx"
                        style="@style/error_label"/>

                    <EditText
                        android:id="@+id/raw_tx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:selectAllOnFocus="true"
                        android:hint="@string/raw_tx_hint"
                        android:ellipsize="end"
                        android:text=""
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:visibility="visible"
                        android:textSize="14sp"
                        android:inputType="textNoSuggestions|textMultiLine|textVisiblePassword"
                        android:maxLines="20"
                        android:imeOptions="actionNext"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                >

                <Button
                    android:id="@+id/scan_recipient_address_button"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12sp"
                    >

                    <TextView
                        android:id="@+id/err_recipient_address"
                        style="@style/error_label"/>

                    <EditText
                        android:id="@+id/recipient_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:selectAllOnFocus="true"
                        android:hint="@string/recipient_address_hint"
                        android:ellipsize="end"
                        android:text=""
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:visibility="visible"
                        android:textSize="14sp"
                        android:textColor="@color/dark_green"
                        android:inputType="textVisiblePassword|textNoSuggestions|textMultiLine"
                        android:imeOptions="actionDone"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="12sp"
                    >

                    <TextView
                        android:id="@+id/err_amount"
                        android:layout_width="wrap_content"
                        android:maxEms="8"
                        style="@style/error_label"/>

                    <EditText
                        android:id="@+id/amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount_hint"
                        android:maxEms="8"
                        android:ellipsize="end"
                        android:text=""
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"
                        android:visibility="visible"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone"
                        />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/spend_tx_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spend_tx_description"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:textSize="14sp"
                android:padding="8dp"
                />

            <TextView
                android:id="@+id/spend_tx_required_age_for_free_tx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_tx_is_old_enough"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:textSize="14sp"
                android:padding="8dp"
                />

            <CheckBox
                android:id="@+id/spend_tx_required_age_for_free_tx_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_tx_is_old_enough"
                android:visibility="gone"
                android:textSize="14sp"
                android:padding="8dp"
                />

            <TextView
                android:id="@+id/spend_tx_warning_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spend_tx_warning_footer"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:textSize="14sp"
                android:padding="8dp"
                />

            <EditText
                android:id="@+id/spend_tx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:hint="@string/spend_tx_hint"
                android:text=""
                android:editable="false"
                android:gravity="center"
                android:visibility="gone"
                android:textSize="14sp"
                android:inputType="textNoSuggestions|textMultiLine"
                android:imeOptions="actionDone"
                />

            <Button
                android:id="@+id/send_tx_button"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/push_tx_label"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
